se implementan nuevas funciones para el funcionamiento